# binance_nshft

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  file_name.parquet  gbdt.model  log_config.yaml
src/: bucket_utils.rs  log_config.rs  main.rs  utils.rs
src/binance/: constants.rs  mod.rs  rest.rs
src/binance/models/: book_ticker.rs  fapi_exchange_info.rs  mod.rs  model_config.rs  orderbook.rs  trades.rs
src/binance/websocket/: connection.rs  mod.rs  requests.rs
src/binance/websocket/handlers/: book_ticker.rs  depth_update.rs  mod.rs  trades.rs
src/model/: data_handling.rs  features.rs  inference.rs  mod.rs
